# roadschema

./: README.md  pyproject.toml
src/roadschema/: __init__.py  schema.py
